tests/ui/imports/ambiguous-import-visibility-globglob-reachable.stderr
error: Direct: pub(crate), Reexported: pub, Reachable: pub, ReachableThroughImplTrait: pub
  --> $DIR/ambiguous-import-visibility-globglob-reachable.rs:14:5
   |
LL |     pub fn f() {}
   |     ^^^^^^^^^^

error: aborting due to 1 previous error

